--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
     --orangeCard: rgba(252, 166, 31, 0.45);
     --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
     --blue: #0d43e7;
+    --purple:#7010d3;
 }
 
 .App{
@@ -19,13 +20,14 @@
 }
 
 .button {
-    background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
-    box-shadow: 0px 20px 24px 3px rgba(251, 161, 40, 0.42);
+    background: blue;
+    box-shadow: 0px 20px 24px 3px rgba(101, 141, 221, 0.575);
     border-radius: 34px;
     border: none;
     color: white;
     font-size: 16px;
     padding: 11px 26px 11px 26px;
+    
   }
   
   .button:hover {
