--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -20,7 +20,7 @@
   font-weight: bold;
 }
 .awesome > :nth-child(2) {
-  color: var(--orange);
+  color: var(--purple);
   font-size: 2.5rem;
   font-weight: bold;
 }
