--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,8 @@
 }
 
 .button {
-    background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
-    box-shadow: 0px 20px 24px 3px rgba(251, 161, 40, 0.42);
+    background: linear-gradient(180deg, #0d43e7 26.71%, #5275ff 99.36%);
+    box-shadow: 0px 20px 24px 3px rgba(40, 170, 251, 0.42);
     border-radius: 34px;
     border: none;
     color: white;
