--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+
+
 :root
 {
   --yellow: #F5C32C;
@@ -21,13 +24,12 @@
 
 .button {
     background: blue;
-    box-shadow: 0px 20px 24px 3px rgba(101, 141, 221, 0.575);
     border-radius: 34px;
     border: none;
     color: white;
     font-size: 16px;
     padding: 11px 26px 11px 26px;
-    
+    font-family: 'Secular One', sans-serif;
   }
   
   .button:hover {
