--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 }
 
 .button {
-    background: blue;
+    background: rgb(255, 0, 0);
     border-radius: 34px;
     border: none;
     color: white;
