--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
     --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
     --blue: #0d43e7;
     --purple:#7010d3;
+    --red:rgb(255,0,0);
 }
 
 .App{
@@ -36,7 +37,7 @@
     background: white;
     cursor: pointer;
     border: 1px solid var(--orange);
-    color: var(--orange);
+    color: var(--red);
   }
   @media screen and (max-width: 480px) {
     .App {
