--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -20,14 +20,17 @@
   font-weight: bold;
 }
 .awesome > :nth-child(2) {
-  color: var(--red);
+  font-family: 'Secular One';
+  color: var(--blue);
   font-size: 2.5rem;
   font-weight: bold;
 }
 .awesome > :nth-child(3) {
   color: var(--gray);
-  font-size: 14px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
   margin-top: 1rem;
+  
 }
 .s-button {
   width: 8rem;
@@ -88,6 +91,19 @@
   box-shadow: var(--smboxShadow);
   background: white;
 }
+.w-secCircle2{
+  width: 6rem;
+  height: 6rem;
+  position: absolute;
+  border-radius: 100%;
+  border: 5px solid #ebebeb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: "none";
+  box-shadow: var(--smboxShadow);
+  background: white;
+}
 
 .w-secCircle > img {
   transform: scale(0.6);
@@ -111,6 +127,8 @@
   left: 18rem;
   top: 8rem;
 }
+
+
 
 @media screen and (max-width: 480px) {
   .works {
