--- a/src/components/Calender/calender.css
+++ b/src/components/Calender/calender.css
@@ -17,9 +17,10 @@
   
   .theme-switch {
     display: inline-block;
-    height: 34px;
+    height: 30px;
     position: relative;
     width: 60px;
+    padding: 0rem;
   }
   
   .theme-switch input {
