--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -2,6 +2,7 @@
   display: flex;
   height: 77vh;
   margin-top: 6rem;
+  
 }
 
 /* left side styling */
@@ -103,6 +104,7 @@
   overflow-y: scroll;
   height: 28rem;
   width: 20rem;
+  border-radius: 34px 0px 0px 0px;
 }
 
 
