--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,12 +1,10 @@
-html {
-	height: 100%;
-}
 
-body {
+
+.bodykk {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
-	background: linear-gradient(#141e30, #243b55);
+	background-color: linear-gradient(#141e30, #243b55);
 }
 
 .login {
