--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,4 +1,4 @@
-html {
+/*html {
 	height: 100%;
 }
 
@@ -8,7 +8,13 @@ body {
 	font-family: sans-serif;
 	background: linear-gradient(#141e30, #243b55);
 }
+*/
 
+.bodyclass{
+	background: black;
+	height:100%;
+	width:100%;
+}
 .login {
 	position: absolute;
 	top: 50%;
