--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,6 +1,4 @@
-
-
-.bodykk {
+body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
@@ -35,7 +33,7 @@
 	width: 100%;
 	padding: 10px 0;
 	font-size: 16px;
-	color: #fff;
+	color: transparent;
 	margin-bottom: 30px;
 	border: none;
 	border-bottom: 1px solid #fff;
