--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -38,4 +38,10 @@
   filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
   border-radius: 19px;
 }
+.portfolio img:hover{
+  background-color: blue;
+  width: 22rem;
+  transform: all 0.5s;
+  transition: 0.8s;
+}
 
