--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,10 +1,14 @@
-body {
+/* body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
-	background-color: linear-gradient(#141e30, #243b55);
+	background: linear-gradient(#0042bc, #243b55);
+} */
+.imgbg
+{
+	width: 100%;
+	height: 100%;
 }
-
 .login {
 	position: absolute;
 	top: 50%;
@@ -33,20 +37,21 @@ body {
 	width: 100%;
 	padding: 10px 0;
 	font-size: 16px;
-	color: transparent;
+	color: rgb(255, 255, 255);
 	margin-bottom: 30px;
 	border: none;
 	border-bottom: 1px solid #fff;
 	outline: none;
 	background: transparent;
+	font-family: 'Courier New', Courier, monospace;
 }
 
 .login .user-box label {
 	position: absolute;
 	top: 0;
 	left: 0;
-	padding: 10px 0;
-	font-size: 16px;
+	padding: 4px 0;
+	font-size: 25px;
 	color: #fff;
 	pointer-events: none;
 	transition: .5s;
@@ -58,6 +63,7 @@ body {
 	left: 0;
 	color: #03e9f4;
 	font-size: 12px;
+	display: block;
 }
 
 .login form a {
