--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -9,6 +9,17 @@
 	width: 100%;
 	height: 100%;
 }
+.n-left1 {
+	flex: 1;
+	align-items: center;
+	justify-content: left;
+	display: flex;
+	gap: 2rem;
+  }
+  .n-name1 {
+	font-size: 1.3rem;
+	font-weight: bold;
+  }
 
 .login {
 	position: absolute;
