--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -9,9 +9,10 @@
 .i-left {
   display: flex;
   position: relative;
-  flex: 1;
+  flex: 1 1;
   flex-direction: column;
   gap: 2rem;
+  margin-top: -74px;
 }
 .i-name {
   display: flex;
@@ -99,7 +100,7 @@
 } */
 .calenderr{
   position: absolute;
-  top: 5rem;
+  top: 8rem;
   left: 48rem;
   overflow-y: scroll;
   height: 28rem;
