--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -6,6 +6,20 @@
     font-weight: 300;
     color: rgb(0, 30, 255);
     border: "3px solid green";
+    
 
 
 }
+.announcement{
+    border: 2.5px solid rgba(0, 128, 0, 0.393);
+    margin: 12px;
+    padding: 8px;
+    border-radius: 35px;
+    height: 40px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    
+}
+
+
