--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -78,7 +78,7 @@
 	display: block;
 }
 
-.login form a {
+.login form button {
 	position: relative;
 	display: inline-block;
 	padding: 10px 20px;
@@ -92,7 +92,7 @@
 	letter-spacing: 4px
 }
 
-.login a:hover {
+.login button:hover {
 	background: #03e9f4;
 	color: #fff;
 	border-radius: 5px;
@@ -102,12 +102,12 @@
 		0 0 100px #03e9f4;
 }
 
-.login a span {
+.login button span {
 	position: absolute;
 	display: block;
 }
 
-.login a span:nth-child(1) {
+.login button span:nth-child(1) {
 	top: 0;
 	left: -100%;
 	width: 100%;
@@ -127,7 +127,7 @@
 	}
 }
 
-.login a span:nth-child(2) {
+.login button span:nth-child(2) {
 	top: -100%;
 	right: 0;
 	width: 2px;
@@ -148,7 +148,7 @@
 	}
 }
 
-.login a span:nth-child(3) {
+.login button span:nth-child(3) {
 	bottom: 0;
 	right: -100%;
 	width: 100%;
@@ -169,7 +169,7 @@
 	}
 }
 
-.login a span:nth-child(4) {
+.login button span:nth-child(4) {
 	bottom: -100%;
 	left: 0;
 	width: 2px;
@@ -189,3 +189,8 @@
 		bottom: 100%;
 	}
 }
+.error{
+	font-weight: bold;
+	font-size: 0.875rem;
+	color : #ff3300;
+  }
