--- a/src/components/Navbarafter/Navbarafter.css
+++ b/src/components/Navbarafter/Navbarafter.css
@@ -33,6 +33,7 @@
   gap: 2.5rem;
   margin-right: 2rem;
   font-family: 'Secular One', sans-serif;
+  align-items: center;
 }
 
 .n-list > ul :hover {
@@ -49,11 +50,40 @@
   margin-left: -17px;
 }
 .n-button {
-  flex: 2;
+  flex:2;
+  margin-top: -15px;
+}
+.n-button5 {
+  background: rgb(105, 0, 255);
+    border-radius: 34px;
+    border: none;
+    color: white;
+    font-size: 16px;
+    padding: 11px 26px 11px 26px;
+    font-family: 'Secular One', sans-serif;
+}
+.n-button5:hover{
+  background: rgb(1, 0, 0);
+    border-radius: 34px;
+    border: none;
+    color: rgb(221, 200, 10);
+    font-size: 16px;
+    padding: 11px 26px 11px 26px;
+    font-family: 'Secular One', sans-serif;
 }
 
 @media screen and (max-width: 480px) {
   .n-list {
     display: none;
   }
+}
+
+.clubs{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.clubschild {
+  flex: 1 0 21%; /* explanation below */
+  margin: 5px;
 }
